[tool.poetry]
name = "reptile"
version = "0.1.0"
description = "reptile desc"
authors = ["herosql <15074798673@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.4.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
